--- a/E-commerce website/style.css
+++ b/E-commerce website/style.css
@@ -69,7 +69,7 @@ footer {
   bottom: 0;
   width: 100%;
   height: 2.5rem;
-  /* margin-top: 100px; */
+  margin-top: 100px;
 }
 
 #page-container {
